# ParticleLife-rs

./: Cargo.toml
old/: grid.rs
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: file.rs  grid.rs  hsl.rs  main.rs  render.rs
