[package]
name = "particlelife-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.13", default-features = false, features = [] }
fastrand = "2.3.0"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
